dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT
dnl AC_CONFIG_AUX_DIR(config)
dnl AM_CONFIG_HEADER(config/config.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(PyApps, 0.1)

dnl Initialize for LOFAR (may set compilers)
lofar_INIT

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl dnl Replace `main' with a function in -lfl:
dnl AC_CHECK_LIB(fl, main)
dnl dnl Replace `main' with a function in -lcosev_r:
dnl AC_CHECK_LIB(cosev_r, main)
dnl dnl Replace `main' with a function in -lcosnm_r:
dnl AC_CHECK_LIB(cosnm_r, main)
dnl dnl Replace `main' with a function in -lorb_r:
dnl AC_CHECK_LIB(orb_r, main)
dnl dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)
dnl dnl Replace `main' with a function in -lvport_r:
dnl AC_CHECK_LIB(vport_r, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl
dnl Check for LOFAR specific things
dnl
lofar_GENERAL
lofar_BLITZ(1)
# lofar_AIPSPP(1)
lofar_PACKAGE(OCTOPUSSY,2)
lofar_PACKAGE(OCTOPython)   # 2=do not link in library
lofar_PACKAGE(MEQ)
lofar_EXTERNAL(gdbm,0,gdbm.h,,)
lofar_EXTERNAL(qdbm,0,hovel.h,,/usr /usr/local /usr/include/qdbm)

dnl
dnl Output Makefiles
dnl
AC_OUTPUT(
src/Makefile
Makefile
)
