dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT
dnl AC_CONFIG_AUX_DIR(config)
dnl AM_CONFIG_HEADER(config/config.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(TimBase, 2.0, no-define)

dnl Initialize for LOFAR (may set compilers)
lofar_INIT

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl dnl Replace `main' with a function in -lfl:
dnl AC_CHECK_LIB(fl, main)
dnl dnl Replace `main' with a function in -lcosev_r:
dnl AC_CHECK_LIB(cosev_r, main)
dnl dnl Replace `main' with a function in -lcosnm_r:
dnl AC_CHECK_LIB(cosnm_r, main)
dnl dnl Replace `main' with a function in -lorb_r:
dnl AC_CHECK_LIB(orb_r, main)
dnl dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)
dnl dnl Replace `main' with a function in -lvport_r:
dnl AC_CHECK_LIB(vport_r, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl
dnl Check for LOFAR specific things
dnl
lofar_GENERAL
lofar_BLITZ(1)
AC_PROG_LIBTOOL

dnl dnl We no longer do this as it was way unportable
dnl dnl Check how to get at the mutex 'kind' attribute
dnl dnl
dnl AC_MSG_CHECKING([how to access the mutex 'kind' attribute])
dnl AC_LANG(C++)
dnl AC_COMPILE_IFELSE(    
dnl   AC_LANG_PROGRAM(
dnl     [[#include <pthread.h>]],
dnl     [[
dnl       pthread_mutex_t mutex;
dnl       mutex.__data.__kind /* ; */
dnl     ]]),
dnl   ac_mutex_kind=__data.__kind,
dnl   [AC_COMPILE_IFELSE(    
dnl     AC_LANG_PROGRAM(
dnl       [[#include <pthread.h>]],
dnl       [[
dnl 	pthread_mutex_t mutex;
dnl 	mutex.__m_kind /* ; */
dnl       ]]),
dnl     ac_mutex_kind=__m_kind,
dnl     [AC_MSG_ERROR([sorry, I don't know how to do this with your pthread library])]
dnl   )]
dnl )
dnl AC_MSG_RESULT($ac_mutex_kind)
dnl AC_DEFINE_UNQUOTED(PTHREAD_MUTEX_KIND,${ac_mutex_kind},[accesses the 'kind' attribute of a mutex structure])
dnl
dnl Output Makefiles
dnl
AC_OUTPUT(
src/Makefile
test/Makefile
Makefile
)
