bin_PROGRAMS        =
check_PROGRAMS   		= 

pythondir = $(libexecdir)/python
timbadir = $(pythondir)/Timba
lsmdir= $(pythondir)/Timba/LSM


dist_lsm_SCRIPTS = LSM/__init__.py \
 LSM/common_utils.py LSM/canvas_inner.py  LSM/Dummy.py\
 LSM/ExportDialog.py LSM/FTDialog.py\
 LSM/LSM_GUI.py LSM/LSM.py LSM/LSM_inner.py LSM/MyCanvasView.py\
 LSM/OptionsDialog.py  LSM/PatchDialog.py\
 LSM/PatchGLDialog.py LSM/PatchOptionsDialog.py\
 LSM/SDialog.py LSM/TransDialog.py LSM/transform.py\
 LSM/TreeDisp.py
  

include $(lofar_sharedir)/Makefile.aids
include $(top_srcdir)/Makefile.common
